--- a/index.html
+++ b/index.html
@@ -1,25 +1,47 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-<<<<<<< HEAD
-  <title>Canvas</title>
-=======
-  <title>Video</title>
->>>>>>> 1a08bcec48ad41866e65501afb982225df0974bf
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no" />
-  <link rel="stylesheet" href="index.css" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-</head>
-<body>
-<<<<<<< HEAD
-  <canvas id="canvas"></canvas>
-  <div id="videobox">
-    <video id="video" autoplay playsinline></video>
-  </div>
-=======
-  <video id="video" autoplay playsinline></video>
->>>>>>> 1a08bcec48ad41866e65501afb982225df0974bf
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>browserCamamera sample</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+    <style>
+        html {
+            height: 100%;
+        }
+        body {
+        margin: 0 auto;
+        width: 200px;
+        height: 600px;
+        }
+
+        video {
+          margin: auto;
+          width: 100%;
+          height: 100%;
+          object-fit: fill;
+        }
+
+    </style>
+  </head>
+  <body>
+    <video id="video" autoplay playsinline="true"></video>
+    <script>
+    var video = document.getElementById('video');
+    var constraints = {
+        audio: false,
+        video: {
+            // スマホのバックカメラを使用
+            facingMode: 'environment'
+        }
+    };
+    //  カメラの映像を取得
+    navigator.mediaDevices.getUserMedia(constraints)
+        .then((stream) => {
+            video.srcObject = stream;
+        })
+        .catch((err) => {
+            window.alert(err.name + ': ' + err.message);
+        });
+    </script>
+  </body>
 </html>
