--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         body {
           margin: 0 auto;
           width: 200px;
-          height: 600px;
+          height: 90%;
         }
 
         video {
@@ -19,6 +19,7 @@
           height: 100%;
           object-fit: fill;
         }
+
         .button_wrapper {
           text-align:center;
         }
